nowrap fix

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -607,7 +607,6 @@ border-radius: 4px;
     -webkit-border-radius: 16px;
     border-radius: 16px;
     display:inline-block;
-    white-space:nowrap;
 }
 
 #home-page > .section h1 {
